--- a/velocity_change.ipynb
+++ b/velocity_change.ipynb
@@ -434,16 +434,23 @@
     "            for k in range(16):\n",
     "                for n in range(16):\n",
     "                    s0 += pd_0[16*j+k, 16*i+n]\n",
-    "            pd[j, i] = s0 / 256;\n",
+    "            pd[j, i] = s0 / 256\n",
     "            "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ef3d072",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "191d9b56",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 7. phantom change"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2620b9d1",
+   "metadata": {},
    "source": []
   }
  ],
